--- a/index.html
+++ b/index.html
@@ -40,8 +40,19 @@
             <p>In nowadays digital society, many banks increasingly transfer their services online which provide more convenient services to customers through e-banking apps. Implementing electronic technology and network, e-banking offers an extensive variety of financial goods and services. This technological evolution brings the banking services to customers' fingertips and allows them conveniently to use the services through apps or net such as paying bill, fun transfer as well as establish bank accounts. Although it is convenient, there are many pros and cons when using e-banking, we also need to consider the security problem seriously.</p>
             <img src="Background 1.JPG" style="max-width:35%; height:auto;">
         </div>
-         <h3>Pros of e-banking</h3>
+         <h3>Pros of E-banking</h3>
         <h4>Convenience:</h4> <p>Enable customers to click a button then can make transactions or manage the bank accounts rapidly from anywhere with internet access, regardless of working hours or location. It can be conducted 24 hours a day, 7 days a week, without physical visit to the bank.</p>
+        <h4>Cost saving:</h4> <p>It eliminates some charges on service fee that associated with the transaction and can enjoy a variety of discounts when they use debit or credit cards during shopping.</p>
+        <h4>Risk avoidance:</h4> <p> As all the transaction is recorded electronically, decrease the chances appear human errors or blunders.</p>
+         <h3>Cons of e-banking</h3>
+        <h4>Security risk:</h4> <p>Using e-banking is vulnerable to cyber risks such as phishing, malware and pharming which can result in identity theft and financial loss.</p>
+        <h4>Technical challenge:</h4> <p>System errors, software problems, and internet connectivity issues may impact the stability of the e-banking services.</p>
+        <h4>Limitations:</h4> <p> Some elderly are not good at handling the electronic device which e-banking cannot benefit them. When customers facing transaction problems, communicating with robots is difficult and cannot immediately solve the problem as well as decrease customers experiencing.</p>
+        <h3>What is Security in e-banking?</h3>
+        <div style="display: flex; align-items: center;">
+            <p>Security in e-banking aims is the measure and technology are implemented to protect financial institutions and customer’s financial information, transactions and accounts opposed to unauthorised access, theft, fraud, and cyberattacks when they are using online banking systems. It is a complex framework which include encryption, firewalls as well as fraud monitoring. Banks also reinforce the system from customer bases by using strong passwords, 2-factor authentication and monitoring vigilant account. To ensure an encrypted and secure online banking environment by avoiding and reducing potential security breaches.</p>
+            <img src="Background 1.JPG" style="max-width:35%; height:auto;">
+        </div>
     </main>
         
    <footer>
