--- a/casestudy.html
+++ b/casestudy.html
@@ -17,6 +17,7 @@
             <li><a href="discovery.html">Solutions</a></li>
             <li><a href="funfact.html">Fun Fact</a></li>
             <li><a href="casestudy.html">Case Study</a></li>
+            <li><a href="summary.html">Summary</a></li>
         </ul>
     </nav>
     <main>
