--- a/casestudy.html
+++ b/casestudy.html
@@ -21,8 +21,18 @@
         </ul>
     </nav>
     <main>
-        <h2>Case Study 1</h2>
-        <p>[Discuss the Case Study.]</p>
+        <h2>Case Study</h2>
+        <p>Mr. Huang, a Hong Kong resident, recently encountered a credit card fraud. He found that his credit card was used for 42 transactions on an online gaming platform without expectation, with each transaction amounting to up to HK$1,199 (a total of HK$50,358). Although he immediately reported the situation to the bank and applied to cancel the credit card, the fraudulent transactions continued before the bank processed his application.</p>
+        <h3>Problem</h3>
+        <p>First, the transaction monitoring technologies failed to detect and block a suspicious or unusual activities of 42 identical transactions (each worth HK$1,199) occurring in rapid period, which should have immediately triggered a fraud alert to the card holder. The bank’s real-time fraud detection system was poorly adjusted or lacked the appropriate machine learning capabilities to identify obvious fraudulent behaviors.</p>
+        <p>Second, the authentication process for online transactions showed which is insecure. The criminals were able to make multiple unauthorized purchases, implying that the e-banking system only relied on basic verification methods like static passwords or SMS one-time codes rather than implementing stronger multi-factor authentication, such as biometrics or behavioral analysis. The system’s lack of speed checks resulted in an exposed risk.</p>
+        <p>Third, the incorporation of various safety measures in the e-banking platform was unsatisfactory. Although Mr. Huang applied to deactivate his card immediately, the procedure's delay in conducting the instructions allowed to make additional fraudulent transactions, indicating a breakdown between the customer service protocol and the transaction processing system. This inconsistent action demonstrates that the banks' IT systems are fragmented that unable to provide real-time fraud prevention, allowing criminals to exploit the failures between detection, reporting, and resolution.</p>
+        <h3>Suggested Solution</h3>
+        <p>Banks can upgrading their technology infrastructure to deploy AI-powered fraud monitoring systems that can detect unusual spending patterns and implement speed checks to block suspicious transactions and notice the card holder immediately. Besides, applying “velocity checks” to limit transactions of the same amount within a short period.</p>
+        <p>Additionally, we can study Japan where require PIN codes for all credit card transactions to prevent fraud.
+PIN for credit card transactions: a 4-digit PIN will generally be required when using IC chip credit cards to prevent unauthorized use.
+3D Secure 2 Authentication: All merchants processing online credit card payments in Japan must implement 3D Secure 2 authentication to ensure that their online payment processes comply with relevant regulations. It supports biometric authentication (fingerprint, facial recognition) and other modern authentication methods.
+</p>
         <h2>Case Study 2</h2>
         <p>[Discuss the Case Study.]</p>
 
