--- a/casestudy.html
+++ b/casestudy.html
@@ -29,10 +29,7 @@
         <p>Third, the incorporation of various safety measures in the e-banking platform was unsatisfactory. Although Mr. Huang applied to deactivate his card immediately, the procedure's delay in conducting the instructions allowed to make additional fraudulent transactions, indicating a breakdown between the customer service protocol and the transaction processing system. This inconsistent action demonstrates that the banks' IT systems are fragmented that unable to provide real-time fraud prevention, allowing criminals to exploit the failures between detection, reporting, and resolution.</p>
         <h3>Suggested Solution</h3>
         <p>Banks can upgrading their technology infrastructure to deploy AI-powered fraud monitoring systems that can detect unusual spending patterns and implement speed checks to block suspicious transactions and notice the card holder immediately. Besides, applying “velocity checks” to limit transactions of the same amount within a short period.</p>
-        <p>Additionally, we can study Japan where require PIN codes for all credit card transactions to prevent fraud.
-PIN for credit card transactions: a 4-digit PIN will generally be required when using IC chip credit cards to prevent unauthorized use.
-3D Secure 2 Authentication: All merchants processing online credit card payments in Japan must implement 3D Secure 2 authentication to ensure that their online payment processes comply with relevant regulations. It supports biometric authentication (fingerprint, facial recognition) and other modern authentication methods.
-</p>
+        <p>Additionally, we can study Japan where require PIN codes for all credit card transactions to prevent fraud.</p>
         <h2>Case Study 2</h2>
         <p>[Discuss the Case Study.]</p>
 
