--- a/casestudy.html
+++ b/casestudy.html
@@ -30,6 +30,8 @@
         <h3>Suggested Solution</h3>
         <p>Banks can upgrading their technology infrastructure to deploy AI-powered fraud monitoring systems that can detect unusual spending patterns and implement speed checks to block suspicious transactions and notice the card holder immediately. Besides, applying “velocity checks” to limit transactions of the same amount within a short period.</p>
         <p>Additionally, we can study Japan where require PIN codes for all credit card transactions to prevent fraud.</p>
+        <h4>PIN for credit card transactions:</h4> <p>a 4-digit PIN will generally be required when using IC chip credit cards to prevent unauthorized use.</p>
+        <h4>3D Secure 2 Authentication:</h4> <p>All merchants processing online credit card payments in Japan must implement 3D Secure 2 authentication to ensure that their online payment processes comply with relevant regulations. It supports biometric authentication (fingerprint, facial recognition) and other modern authentication methods.</p>
         <h2>Case Study 2</h2>
         <p>[Discuss the Case Study.]</p>
 
