--- a/summary.html
+++ b/summary.html
@@ -21,11 +21,8 @@
         </ul>
     </nav>
     <main>
-
-    </main>
-    <footer>
-        <p>&copy; 2024 [Your Group Name]. All rights reserved.</p>
-    </footer>
-    <script src="script.js"></script>
-</body>
-</html>
+        <p>Electronic banking services provide convenience which allowing us to manage our bank account from anywhere through internet. However, this convenience has potential risks. Recently, news about e-banking fraud appears frequently, which highlights the importance of cybersecurity in the e-banking system. After experiencing and doing information research, the potential risk affects everyone who uses online banking services, and this is not just the responsibility of banks. </p>
+        <p>The threats of electronic banking security are numerous. Phishing, which hackers attempt to fake users to disclose sensitive information. Malware, which may infect devices, allows hackers to steal personal information and gain unauthorized access to accounts. Man-in-the-middle attack, which enter a current connection to steal data and inject deceptive information. These threats may cause significant financial losses and identity theft, as well as reputational harm to financial institutions.</p>
+        <p>Fortunately, there are multiple, and updated solutions are available to reduce these risks. Multi-factor authentication (MFA) is critical to defense, and which is more secure than using password alone. Strong encryption protocols protect data while firewalls and intrusion detection systems protect the servers. AI-driven fraud detection systems can identify suspicious transactions effectively and block fraudulent activities before they occur. Regular security tests are essential to identify and address vulnerabilities in e-banking. In addition, it is also crucial to educate consumers on cybersecurity, which is best practice.</p>
+        <p>Personally, we all had experienced fraud from various sources, and we really highlighted the threat being near us and the importance of being vigilant. Some of us received SMS messages from the bank, warning us to pay the account balance and urging us to click on a link to resolve the issue. The email looked legitimate and even had the bank's logo and branding. However, we felt something was wrong and ignored it. Although the scam hasn't fooled us successfully, it was a reminder that these attacks are complicated, and people can be deceived easily. Since then, we have become more cautious; be careful to read the message and not click on links in emails or text messages to prevent any unauthorised transactions or personal information exposure.</p>
+        <p>To summarise, protecting the security of e-banking is an equal and sustainable responsibility.  Banks must invest in effective safety systems to preserve emerging threats.  Regulators must impose severe security requirements and urge financial institutions responsible for protecting client data.  Consumers must be vigilant and educated in preventing their banking accounts. We should work together to maintain secure e-banking environment.</p>
