--- a/casestudy.html
+++ b/casestudy.html
@@ -32,11 +32,10 @@
         <p>Additionally, we can study Japan where require PIN codes for all credit card transactions to prevent fraud.</p>
         <h4>PIN for credit card transactions:</h4> <p>A 4-digit PIN will generally be required when using IC chip credit cards to prevent unauthorized use.</p>
         <h4>3D Secure 2 Authentication:</h4> <p>All merchants processing online credit card payments in Japan must implement 3D Secure 2 authentication to ensure that their online payment processes comply with relevant regulations. It supports biometric authentication (fingerprint, facial recognition) and other modern authentication methods.</p>
-        <h2>Case Study 2</h2>
-        <p>[Discuss the Case Study.]</p>
+        
 
         <h2>References</h2>
-        <p>[Reference.]</p>
+        <a href=“https://www.hk01.com/%E5%8D%B3%E6%99%82%E5%A8%9B%E6%A8%82/790655/%E6%9D%B1%E5%BC%B5%E8%A5%BF%E6%9C%9B-%E7%8E%8B%E5%85%88%E7%94%9F%E4%BF%A1%E7%94%A8%E5%8D%A1%E8%A2%AB%E7%9B%9C%E7%94%A8-%E9%8A%80%E8%A1%8C%E6%8E%A8%E5%8D%B8%E8%B2%AC%E4%BB%BB%E8%A6%81%E5%8D%A1%E4%B8%BB-%E7%A1%AC%E9%A3%9F-%E4%BA%94%E8%90%AC">https://www.hk01.com/%E5%8D%B3%E6%99%82%E5%A8%9B%E6%A8%82/790655/%E6%9D%B1%E5%BC%B5%E8%A5%BF%E6%9C%9B-%E7%8E%8B%E5%85%88%E7%94%9F%E4%BF%A1%E7%94%A8%E5%8D%A1%E8%A2%AB%E7%9B%9C%E7%94%A8-%E9%8A%80%E8%A1%8C%E6%8E%A8%E5%8D%B8%E8%B2%AC%E4%BB%BB%E8%A6%81%E5%8D%A1%E4%B8%BB-%E7%A1%AC%E9%A3%9F-%E4%BA%94%E8%90%AC</a>
     </main>
     <footer>
         <p>&copy; 2024 [Your Group Name]. All rights reserved.</p>
