--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
             <li><a href="funfact.html">Fun Fact</a></li>
             <li><a href="casestudy.html">Case Study</a></li>
             <li><a href="summary.html">Summary</a></li>
+            <li><a href="quiz.html">Quiz</a></li>
         </ul>
     </nav>
     <main>
