--- a/about.html
+++ b/about.html
@@ -59,7 +59,12 @@
 <h2>Impact of Artificial Intelligence</h2>
 <p>With the advancement of artificial intelligence, phishing attacks have evolved to target specific individuals more effectively. Attackers can create realistic videos and audio through synthetic images and voice alteration, increasing the victim's trust. They may also impersonate credible banking institutions over the phone to trick users into providing SMS verification codes or security information. By altering URLs, they can evade technical defenses, making phishing attacks even more challenging to counter.</p>
         <h2>Man-in-the-middle attacks</h2>
-        <p>[Describe the main features or functions.]</p>
+        <p>A Man-in-the-Middle (MITM) attack in e-banking is a cyberattack where a malicious actor secretly intercepts and potentially alters the communication between a bank customer and the bank’s online system. The attacker positions themselves between the two parties, making the user believe they are communicating directly with the bank, while in reality, the attacker captures sensitive data such as login credentials, account information, and transaction details. This stolen data can then be used for unauthorized transactions, identity theft, or financial fraud.</p>
+        <h2>How MITM Attacks Are Carried Out in E-Banking</h2>
+        <li><Strong>Wi-Fi Eavesdropping and Fake Hotspots: </Strong>Attackers set up rogue Wi-Fi networks with legitimate-sounding names in public places. When users connect, the attacker intercepts all data transmitted, including banking credentials and transaction data.</li> 
+        <li><strong>Malware on Mobile Devices: </strong>Attackers implant malware on smartphones that intercept and manipulate banking app communications, enabling them to hijack transactions or steal data without the user’s knowledge.</li>
+        <li><strong>Packet Sniffing Tools: </strong>Delivered through phishing or malicious websites, these tools monitor network traffic to capture unencrypted data from banking sessions.</li>
+
     </main>
     <footer>
         <p>&copy; 2025 [CS1102]. All rights reserved.</p>
