--- a/about.html
+++ b/about.html
@@ -61,10 +61,14 @@
         <h2>Man-in-the-middle attacks</h2>
         <p>A Man-in-the-Middle (MITM) attack in e-banking is a cyberattack where a malicious actor secretly intercepts and potentially alters the communication between a bank customer and the bank’s online system. The attacker positions themselves between the two parties, making the user believe they are communicating directly with the bank, while in reality, the attacker captures sensitive data such as login credentials, account information, and transaction details. This stolen data can then be used for unauthorized transactions, identity theft, or financial fraud.</p>
         <h2>How MITM Attacks Are Carried Out in E-Banking</h2>
-        <li><Strong>Wi-Fi Eavesdropping and Fake Hotspots: </Strong>Attackers set up rogue Wi-Fi networks with legitimate-sounding names in public places. When users connect, the attacker intercepts all data transmitted, including banking credentials and transaction data.</li> 
-        <li><strong>Malware on Mobile Devices: </strong>Attackers implant malware on smartphones that intercept and manipulate banking app communications, enabling them to hijack transactions or steal data without the user’s knowledge.</li>
-        <li><strong>Packet Sniffing Tools: </strong>Delivered through phishing or malicious websites, these tools monitor network traffic to capture unencrypted data from banking sessions.</li>
-
+        <li><Strong>Wi-Fi Eavesdropping and Fake Hotspots:</Strong>Attackers set up rogue Wi-Fi networks with legitimate-sounding names in public places. When users connect, the attacker intercepts all data transmitted, including banking credentials and transaction data.</li> 
+        <li><strong>Malware on Mobile Devices:</strong>Attackers implant malware on smartphones that intercept and manipulate banking app communications, enabling them to hijack transactions or steal data without the user’s knowledge.</li>
+        <li><strong>Packet Sniffing Tools:</strong>Delivered through phishing or malicious websites, these tools monitor network traffic to capture unencrypted data from banking sessions.</li>
+<h2>Impact of MITM Attacks in E-Banking</h2>
+        <li>Unauthorized fund transfers and financial theft by altering transaction details.</li>
+        <li>Theft of personal and banking credentials leading to identity fraud.</li>
+        <li>Loss of customer trust and damage to the bank’s reputation.</li>
+        <li>Operational disruptions as banks investigate and mitigate breaches.</li>
     </main>
     <footer>
         <p>&copy; 2025 [CS1102]. All rights reserved.</p>
