--- a/funfact.html
+++ b/funfact.html
@@ -45,7 +45,46 @@
 <img src="A_detailed_illustration_showing_two_characters_side_by_side_On_the_left_a_person_holding_an_iPhone_displays_a_bank_app_on_their_screen_with_a_visible_screenshot_icon_indicating_they_can_take_a_screenshot_The_phone_screen_should_clearly_show_the_Apple.png" alt="Types of Phishing" style="max-width:20%; height:auto;">
 
 <h2>Fun Fact 3</h2>
-<p>[Discuss the fun fact.]</p>
+<p><strong style="font-size: 1.2em;">E-banking App Size</strong></p>
+<p>In Hong Kong, there is an interesting debate around the size of e-banking apps and their perceived security. Some users believe that a larger app size indicates a safer app because it may contain more comprehensive security features and protections against malware and fraud. This view suggests that bigger apps can better safeguard users’ financial data by incorporating advanced anti-malware measures, biometric authentication, and real-time fraud detection systems, which often require more storage space.</p>
+<p>On the other hand, many users express concerns about e-banking apps being too large, as they can consume significant storage space on mobile devices. Given that smartphones have limited storage, especially for users with multiple apps, a bulky banking app may be inconvenient and discourage frequent use. Users prefer apps that are lean and efficient without compromising security, highlighting the challenge banks face in balancing robust security features with app size and performance.</p>
+<h2>E-Banking Size Ranking<h2>
+<table border="1" cellpadding="8" cellspacing="0" style="border-collapse: collapse; width: 100%;">
+  <thead>
+    <tr>
+      <th>Rank by App Size</th>
+      <th>Bank / App Name</th>
+      <th>App Size</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr>
+      <td>1</td>
+      <td>HSBC HK Mobile Banking</td>
+      <td>749 MB</td>
+    </tr>
+    <tr>
+      <td>2</td>
+      <td>Hang Seng Personal Banking</td>
+      <td>~541 MB</td>
+    </tr>
+    <tr>
+      <td>3</td>
+      <td>Mox Bank</td>
+      <td>226.5 MB</td>
+    </tr>
+    <tr>
+      <td>4</td>
+      <td>BOCHK (Bank of China HK)</td>
+      <td>185 MB</td>
+    </tr>
+    <tr>
+      <td>5</td>
+      <td>BEA Mobile (Bank of East Asia)</td>
+      <td>158 MB</td>
+    </tr>
+  </tbody>
+</table>
 
 <h2>References</h2>
 <p>
