--- a/discovery.html
+++ b/discovery.html
@@ -78,6 +78,36 @@
 
 <h3>Conclusion</h3>
 <p>MFA is an effective security measure that strengthens defenses against phishing attacks. However, it's essential to remain aware of its limitations and continue to educate users about best practices in digital security. By combining MFA with user awareness and training, organizations can create a more secure online environment for everyone.</p>
+
+<h2>Solutions to Man-in-the-Middle (MITM) Attacks in E-Banking</h2>
+
+<p>To effectively protect e-banking apps from MITM attacks, a multi-layered security approach is essential. Key solutions include:</p>
+
+<h3>1. Implement End-to-End Encryption</h3>
+<p>Encrypt all data transferred between the user’s device and the bank’s servers to ensure that intercepted data remains unreadable to attackers. This prevents unauthorized parties from accessing sensitive information during transmission.</p>
+
+<h3>2. Use Strong Certificate Validation and Certificate Pinning</h3>
+<p>Properly implement SSL/TLS certificate validation to verify server identities and prevent attackers from using fake certificates. Certificate pinning restricts the app to trust only specific certificates, blocking malicious proxies or spoofed certificates that facilitate MITM attacks.</p>
+
+<h3>3. Regular Security Audits and Updates</h3>
+<p>Conduct frequent security audits and penetration testing to identify and fix vulnerabilities before attackers exploit them. Regularly release app updates and patches to address emerging threats and improve security mechanisms.</p>
+
+<h3>4. Mobile App Shielding and Anti-Tampering</h3>
+<p>Protect the app against static and dynamic tampering, reverse engineering, and unauthorized code modifications. This reduces the risk of attackers injecting malicious code or bypassing security controls that could enable MITM attacks.</p>
+
+<h3>5. Behavioral Analytics and Anomaly Detection</h3>
+<p>Monitor user behavior patterns to detect suspicious activities or anomalies that may indicate an ongoing MITM attack or account compromise. Real-time detection helps prevent fraudulent transactions and unauthorized access.</p>
+
+<h3>6. Avoiding Public Wi-Fi</h3>
+<p>Avoiding public Wi-Fi is one of the most effective ways to protect yourself from Man-in-the-Middle (MITM) attacks and other cyber threats when using e-banking services. Public Wi-Fi networks, especially those that are unsecured or open, pose significant risks because they allow hackers to intercept data transmitted between your device and the internet.<p>
+
+<h3>7. Secure Data Storage on Device</h3>
+<p>Encrypt sensitive data stored locally on the device to protect it in case of device loss or theft, preventing attackers from extracting valuable information even if they gain physical access.</p>
+
+<h3>Conclusion</h3>
+<p>By combining these technical safeguards—strong encryption, robust certificate handling, continuous monitoring, and secure coding practices—banks can significantly reduce the risk of MITM attacks and protect their customers’ financial data and trust.</p>
+
+    
     </main>
     <footer>
         <p>&copy; 2024 [CS1102]. All rights reserved.</p>
