--- a/discovery.html
+++ b/discovery.html
@@ -105,7 +105,7 @@
 <p>Encrypt sensitive data stored locally on the device to protect it in case of device loss or theft, preventing attackers from extracting valuable information even if they gain physical access.</p>
 
 <h3>Conclusion</h3>
-<p>By combining these technical safeguards—strong encryption, robust certificate handling, continuous monitoring, and secure coding practices—banks can significantly reduce the risk of MITM attacks and protect their customers’ financial data and trust.</p>
+<p>By combining these technical safeguards—strong encryption, robust certificate handling, continuous monitoring, and secure coding practices—banks can significantly reduce the risk of MITM attacks and protect their customers’ financial data and trust. Users could also protect themselves easily by avoiding public network.</p>
 
     
     </main>
