--- a/discovery.html
+++ b/discovery.html
@@ -98,7 +98,7 @@
 <h3>5. Behavioral Analytics and Anomaly Detection</h3>
 <p>Monitor user behavior patterns to detect suspicious activities or anomalies that may indicate an ongoing MITM attack or account compromise. Real-time detection helps prevent fraudulent transactions and unauthorized access.</p>
 
-<h3>6. Avoiding Public Wi-Fi</h3>
+<h3>6. Avoid Public Wi-Fi</h3>
 <p>Avoiding public Wi-Fi is one of the most effective ways to protect yourself from Man-in-the-Middle (MITM) attacks and other cyber threats when using e-banking services. Public Wi-Fi networks, especially those that are unsecured or open, pose significant risks because they allow hackers to intercept data transmitted between your device and the internet.<p>
 
 <h3>7. Secure Data Storage on Device</h3>
