--- a/casestudy.html
+++ b/casestudy.html
@@ -13,7 +13,7 @@
     <nav>
         <ul>
             <li><a href="index.html">Background</a></li>
-            <li><a href="about.html">Threats</a></li>
+            <li><a href="about.html">Threat</a></li>
             <li><a href="discovery.html">Solutions</a></li>
             <li><a href="funfact.html">Fun Fact</a></li>
             <li><a href="casestudy.html">Case Study</a></li>
@@ -42,7 +42,7 @@
     </main>
     </main>
     <footer>
-        <p>&copy; 2024 [Your Group Name]. All rights reserved.</p>
+        <p>&copy; 2025 [CS1102]. All rights reserved.</p>
     </footer>
     <script src="script.js"></script>
 </body>
