--- a/about.html
+++ b/about.html
@@ -14,7 +14,7 @@
         <ul>
             <li><a href="index.html">Background</a></li>
             <li><a href="about.html">Threat</a></li>
-            <li><a href="discovery.html">Solution</a></li>
+            <li><a href="discovery.html">Solutions</a></li>
             <li><a href="funfact.html">Fun Fact</a></li>
             <li><a href="casestudy.html">Case Study</a></li>
             <li><a href="summary.html">Summary</a></li>
