--- a/summary.html
+++ b/summary.html
@@ -29,7 +29,7 @@
         <p>To summarise, protecting the security of e-banking is an equal and sustainable responsibility.  Banks must invest in effective safety systems to preserve emerging threats.  Regulators must impose severe security requirements and urge financial institutions responsible for protecting client data.  Consumers must be vigilant and educated in preventing their banking accounts. We should work together to maintain secure e-banking environment.</p>
     </main>
     <footer>
-        <p>&copy; 2024 [Your Group Name]. All rights reserved.</p>
+        <p>&copy; 2025 [CS1102]. All rights reserved.</p>
     </footer>
     <script src="script.js"></script>
 </body>
