--- a/discovery.html
+++ b/discovery.html
@@ -22,7 +22,7 @@
         </ul>
     </nav>
     <main>
-        <h2>Solution 1</h2>
+        <h2>Solution to Encryption technology outdated</h2>
 <p><p>
     Despite the inevitability of the challenges posed by outdated encryption technology, many electronic wallet companies today are continuously innovating and launching various new verification and protective systems to mitigate associated risks. Here are some key solutions being implemented:
 </p>
@@ -52,7 +52,7 @@
     Updating encryption technology is critical for safeguarding financial assets and protecting users' data from potential breaches. Electronic banks must actively enhance and refine their security measures to tackle the evolving threats posed by cyber-attacks. It is equally important for users to maintain a high level of security awareness and regularly update their personal security settings as a proactive defense against such threats.
 </p></p>
 
-<h2>Solution 2</h2>
+<h2>Solution to Phishing</h2>
 <p><strong style="font-size: 1.2em;">Enhancing Security with Multi-Factor Authentication (MFA)</strong></p>
 <p>Multi-factor authentication (MFA) is a powerful tool in the fight against phishing attacks, providing an extra layer of security for users. By requiring individuals to verify their identity through at least two different methods, MFA significantly reduces the risk of unauthorized access.</p>
 
